--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "aes256": "^1.0.2",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
+    "crypto": "0.0.3",
     "debug": "~2.6.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
     "jquery": "^3.2.1",
     "jsdom": "^9.12.0",
     "moment": "^2.18.1",
