--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.13.0",
     "node-datetime": "^1.0.0",
     "request-ip": "^2.0.1",
+    "sequelize": "^3.30.4",
     "serve-favicon": "~2.4.2"
   }
 }
