--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "ejs-locals": "^1.0.2",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "imgur": "^0.2.1",
     "jquery": "^3.2.1",
     "jsdom": "^9.12.0",
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "node-datetime": "^1.0.0",
     "request-ip": "^2.0.1",
